fixed everything on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -635,3 +635,24 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   letter-spacing: 0.5px;
   margin-top: 20px;
 }
+
+@media only screen and (max-width: 767px) {
+  /* CSS styles for mobile devices */
+  .banner h1 {
+    font-size: 35px;
+  }
+  nav.navbar.scrolled {
+    height: 200px;
+  }
+  /* .vvd {
+    
+  } */
+  nav.navbar .navbar-nav .nav-link.navbar-link {
+    background-color: #000;
+    padding: 10px;
+    opacity: 1;
+  }
+  span.navbar-text {
+    background-color: #000;
+  }
+}
